# experiments

./: LICENSE  README.md  benchmark_dense.py  benchmark_dense_int_float.py  benchmark_hybrid.py  benchmark_sparse.py  benchmark_sparse_int_float.py  density_evolution.py  instance_id_to_name.pkl  pyproject.toml  synthetic_exp.py  utils.py
results/: benchmark_results.csv  synth_results.db
